# quantiq

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  deploy_logos.sh  index.html  pyproject.toml  setup.py.old  temp_header.md  temp_newsletter.html  temp_readme_header.md  test_cirquit.py  test_quantiq.py
.github/workflows/: ci.yaml  deploy-pages.yml
blog/: CNAME  index.html  index.md
blog/_posts/: 2025-10-09-introducing-cirquit.md
blog/posts/: introducing-cirquit-v1-1-0.html
brand/: README.md
cirquit/: __init__.py  cirquit.py  gates.py  simulator.py  visualization.py
docs/: CNAME  index.html
docs/blog/: index.html  index.md  thanks.html
docs/blog/posts/: introducing-cirquit-v1-1-0.html
quantiq/: __init__.py  gates.py  py.typed  quantiq.py  results.py  simulator.py  visualization.py
tests/: test_quantum_circuit.py
website/: CNAME  index.html  thanks.html
