[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantiq-dev"
version = "1.2.2"
description = "Quantum computing with intelligence - learn, build, deploy"
readme = "README.md"
authors = [
    {name = "Tony Rossi", email = "anthony.rossi1983@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Education",
]
keywords = ["quantum", "quantum-computing", "simulator", "qubits", "education", "learning"]
dependencies = [
    "numpy>=1.24.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
    "pylint>=2.0",
]

[project.urls]
Homepage = "https://quantiq.dev"
Documentation = "https://quantiq.dev/docs"
Repository = "https://github.com/tony-siqurity-ai/quantiq"
Changelog = "https://github.com/tony-siqurity-ai/quantiq/blob/main/CHANGELOG.md"
Blog = "https://quantiq.dev/blog"

[tool.setuptools]
packages = ["quantiq"]
